# ModernVkTriangle

./: .gitignore  CMakeLists.txt  README.md
assets/: shader.slang
src/: main.cpp
